add mainclass to module-info